Fix page header spacing. (#738)
* Update CSS for RepoHeader to PageHeader rename.

* Fix spacing in header.

* Update tests.

--- a/ui/src/css/components/_PageHeader.scss
+++ b/ui/src/css/components/_PageHeader.scss
@@ -14,30 +14,31 @@
  * limitations under the License.
  */
 
-#repoheader {
+#pageheader {
   border-bottom: 1px solid #dadce0;
+  height: 64px;
   overflow: auto;
 }
 
-#repoheader-backbutton {
+#pageheader-backbutton {
   float: left;
   margin: 18px 20px 0 16px;
 }
 
-#repoheader-info {
+#pageheader-info {
   float: left;
 }
 
-#repoheader p {
-  margin: 0;
-}
-
-#repoheader p.mdc-typography--subtitle1 {
+#pageheader p.mdc-typography--subtitle1 {
   color: #212121;
-  margin: 3px 0 8px;
+  font-size: 16px;
+  line-height: 16px;
+  margin: 14px 0 8px;
 }
 
-#repoheader p.mdc-typography--subtitle2 {
+#pageheader p.mdc-typography--subtitle2 {
   color: #757575;
-  margin: 0 0 3px;
+  font-size: 14px;
+  line-height: 14px;
+  margin: 0;
 }
